--- a/04-Data Bricks/11. medallion architecture.md
+++ b/04-Data Bricks/11. medallion architecture.md
@@ -4,8 +4,58 @@
 
 ![image](https://github.com/user-attachments/assets/a742db9c-66e6-489c-980f-f49cab46a037)
 
-2. ss
-3. 
+2. Know current default schema/database
+``` sql
+%sql
+select current_schema()
+```
+3. Created **bronze** database
+```sql
+%sql
+CREATE DATABASE bronze
+```
+4. Insert raw data into **bronze** database
+```python
+from pyspark.sql.functions import *
+
+# Assuming the data is in a CSV file named "emp.csv"
+bronze_df = spark.read.csv("dbfs:/FileStore/b231101/emp.csv", header=True)
+
+# Write the DataFrame to a Delta table in the Bronze layer
+bronze_df.write.format("delta").mode("overwrite").saveAsTable("bronze.employee_raw")
+```
+5. Create **Sliver** database
+``` sql
+%sql
+CREATE DATABASE silver
+```
+6. Insert into **Silver** database
+```python
+from pyspark.sql.functions import *
+
+silver_df = bronze_df.withColumn("COMM", coalesce(col("COMM"), lit(0)))  # Handle null COMM values
+
+# Write the DataFrame to a Delta table in the Bronze layer
+silver_df.write.format("delta").mode("overwrite").saveAsTable("silver.employee_cleaned")
+```
+7. Create **gold** database
+``` sql
+%sql
+CREATE DATABASE gold
+```
+8. Insert into **gold** database
+```python
+gold_df = silver_df.groupBy("DEPTNO").agg(
+    avg("SAL").alias("AvgSalary"),
+    max("SAL").alias("MaxSalary"),
+    count("*").alias("NumEmployees")
+)
+
+# Write the DataFrame to a Delta table in the gold layer
+silver_df.write.format("delta").mode("overwrite").saveAsTable("gold.emp")
+
+```
+9. 
 
 # Reference 
 1. refer more [info](https://www.databricks.com/glossary/medallion-architecture)
