--- a/04-Data Bricks/11. medallion architecture.md
+++ b/04-Data Bricks/11. medallion architecture.md
@@ -74,6 +74,9 @@ silver_df.write.format("delta").mode("overwrite").saveAsTable("gold.emp")
 ```
 9. 
 
-# Reference 
-1. refer more [info](https://www.databricks.com/glossary/medallion-architecture)
-Delta Lake is often considered a more advanced and robust solution for data management, especially in scenarios where data quality, consistency, and transactional support are critical.
+## Reference 
+1. Refer more [info](https://www.databricks.com/glossary/medallion-architecture)
+## Questions
+1. What is Delta Lake
+## Answers
+1. **Delta Lake** is often considered a more advanced and robust solution for data management, especially in scenarios where data quality, consistency, and transactional support are critical.
