--- a/04-Data Bricks/11. medallion architecture.md
+++ b/04-Data Bricks/11. medallion architecture.md
@@ -77,6 +77,21 @@ silver_df.write.format("delta").mode("overwrite").saveAsTable("gold.emp")
 ## Reference 
 1. Refer more [info](https://www.databricks.com/glossary/medallion-architecture)
 ## Questions
-1. What is Delta Lake
+1. What is Delta Lake?
+2. What are the benfits of Benefits of deltalake architecture?
+3. what is data lake?
 ## Answers
 1. **Delta Lake** is often considered a more advanced and robust solution for data management, especially in scenarios where data quality, consistency, and transactional support are critical.
+2. Benefits of a lakehouse architecture
+    - 1. Simple data model
+      2. Easy to understand and implement
+      3. Enables incremental ETL
+      4. Can recreate your tables from raw data at any time
+      5. ACID transactions, time travel
+3. Data Lake is a centralized repository for storing large volumes of structured and unstructured data in its raw format. It provides a flexible and scalable platform for data analysis, machine learning, and data warehousing.
+    - Popular Data Lake Technologies:
+          - Databricks: A cloud-based platform for data engineering and analytics, offering Delta Lake for structured data.
+          - Amazon S3: A scalable object storage service that can be used for data lakes.
+          - Azure Data Lake Storage Gen2: A highly scalable and secure data lake storage service.
+          - Google Cloud Storage: A scalable object storage service for storing and managing data.
+4. 
