Update 07. Read Modes.md

--- a/04-Data Bricks/07. Read Modes.md
+++ b/04-Data Bricks/07. Read Modes.md
@@ -65,6 +65,14 @@ display(ford_df)
 ``` pyspark
 %fs ls /FileStore/tables/rritec/output/ford_corrupted_records
 ```
+3. Capture above floder path and run as shown bleow
+``` pyspark
+%fs head dbfs:/FileStore/tables/rritec/output/ford_corrupted_records/20240909T025541/bad_records/
+```
+4. Capture above File path and run as shown bleow
+``` pyspark
+%fs head dbfs:/FileStore/tables/rritec/output/ford_corrupted_records/20240909T025541/bad_records/part-00000-20821f4a-9917-463f-a01a-3fbc0e31f47c
+```
 ## inferSchema
 
 1. observe data
