Update 07. Read Modes.md

--- a/04-Data Bricks/07. Read Modes.md
+++ b/04-Data Bricks/07. Read Modes.md
@@ -67,7 +67,7 @@ display(ford_df)
 ```
 3. Capture above floder path and run as shown bleow
 ``` pyspark
-%fs head dbfs:/FileStore/tables/rritec/output/ford_corrupted_records/20240909T025541/bad_records/
+%fs ls dbfs:/FileStore/tables/rritec/output/ford_corrupted_records/20240909T025541/bad_records/
 ```
 4. Capture above File path and run as shown bleow
 ``` pyspark
