--- a/miscellaneous/cosmos-db/cosmosdb.ipynb
+++ b/miscellaneous/cosmos-db/cosmosdb.ipynb
@@ -34,8 +34,8 @@
     "import asyncio\n",
     "\n",
     "URL = \"https://rgrrcdb.documents.azure.com:443/\"\n",
-    "KEY = \"u2sKgzsN40crDOZxwp1Nhaa1bCENhKdvetO45gp4ll0ZSSbu65grSaQQDQJhfJIhfotc0dEkdECOACDbAFxPUA==\"\n",
-    "client = CosmosClient(URL, credential=KEY)\n"
+    "KEY = \"<Primerkey>\"\n",
+    "client = CosmosClient(URL, credential=KEY)"
    ]
   },
   {
