--- a/miscellaneous/KeyVault/01. KeyVault.md
+++ b/miscellaneous/KeyVault/01. KeyVault.md
@@ -1,8 +1,44 @@
 # KeyVault
+
 1. Azure Key Vault is a cloud service used to manage keys, secrets, and certificates.
 2. Key Vault eliminates the need for developers to store security information in their code.
 3. It allows you to centralize the storage of your application secrets which greatly reduces the chances that secrets may be leaked.
 4. key vault provides logs of all access and usage attempts of your secrets so you have a complete audit trail for compliance.
+
 # Create KeyVault
-1. open [portal.azure.com](portal.azure.com)
-2. 
+
+1. Open [portal.azure.com](portal.azure.com)
+2. Search **Key Vaults** > click on it
+3. Click on **Create** > Provide below information
+
+![image](https://github.com/user-attachments/assets/e336fa40-3974-4298-bbf8-fda51e2e97d1)
+
+4. Click on review and create
+5. Click on create
+6. Click on **go to resource**
+
+# Provide Required Roles
+
+1. Click on Access Control(IAM) > Click on **Add** > Click on **Add role assignment** > Under **Job Function roles** > Select **Key Vault Administrator** > Click on **Next**
+2. Click on **Select Members** > Select your userid > click on select
+3. Select Manage identiry radio button > Click on Select Members > Select Datafatory > click on Select
+
+![image](https://github.com/user-attachments/assets/e0cb433b-e224-4027-8661-b53fceac86fe)
+
+4. Click on review and assign > again click on review and assign
+
+# Create Secrets
+
+1. Click on **Secrets** > Click on **Generate/import** > provide name as **rritecsa** > Secretvalue as storage account connection string(Get this from Storage accounts keys page)
+2. Click on **Create**
+
+![image](https://github.com/user-attachments/assets/08734fd7-8a96-4fcd-a981-ca0f65ad504f)
+
+# Use secrets in ADF
+
+1. 
+
+# Questions
+# Answers
+
+
