--- a/miscellaneous/KeyVault/01. KeyVault.md
+++ b/miscellaneous/KeyVault/01. KeyVault.md
@@ -36,7 +36,13 @@
 
 # Use secrets in ADF
 
-1. 
+1. In ADF > Click on **Manage** > Click on Linked Service > click on new > Search for Key vaults > Select Azure Key Vault > click on continue > Provide below information > click on Create
+
+![image](https://github.com/user-attachments/assets/d16b957c-0d6c-4807-95fd-474c971e844c)
+
+2. Click on Linked Service > click on new > Search for blob > Select Azure blob Storage > click on continue > Provide below information > click on Create
+
+![image](https://github.com/user-attachments/assets/a4f192d8-2fd7-42e5-985f-5208cb5abd51)
 
 # Questions
 # Answers
