Update 02. Databricks Introduction.md

--- a/04-Data Bricks/02. Databricks Introduction.md
+++ b/04-Data Bricks/02. Databricks Introduction.md
@@ -38,3 +38,27 @@
     1. click on `create` > Click on `cluster` > provide name `rritecdb`
 
 ![image](https://user-images.githubusercontent.com/20516321/220528295-0bf2384f-b575-4561-8e74-3d829eda0ddf.png)
+
+# Questions
+1. Databricks can be used with which cloud
+    1. Azure
+    2. GCP
+    3. AWS
+    4. All of the above
+2. Community version of databricks has how many nodes cluster ? and what is the idle life time ?
+3. Databricks supports Data engginering and data science ?
+    1. True
+    2. False
+4. What are the languages supported by atabricks
+    1. SQL
+    2. R
+    3. Python
+    4. Scala
+    5. All of the above
+   
+
+# Answers
+1. 4
+2. Single Node Cluster and One/Two hours
+3. True
+4. 5
