Update 03. Create DataFrame.md

--- a/04-Data Bricks/03. Create DataFrame.md
+++ b/04-Data Bricks/03. Create DataFrame.md
@@ -1,6 +1,6 @@
 # DBFS
 
-1. Upload files into databricks
+## Upload files into databricks
 
     1. Click on `data` > under `upload file` > drag and drop file from rritec materials labdata/reatail_db/orders/part-00000
 
@@ -8,7 +8,7 @@
 
     2.  Copy the path `/FileStore/tables/part_00000-2`, it is needed in next exercise
 
-2. See the data of files in DBFS
+## See the data of files in DBFS
 
     1. Click on **Create** > Click on **Notebook** > Name it as **Create Dataframes** > Click on **Create**
     2. Read about [Databricks Utilities](https://docs.databricks.com/dev-tools/databricks-utils.html#databricks-utilities)
@@ -34,9 +34,9 @@
 
         
     3. 
-# Dataframes
+# Create Dataframes
 
-1. Create dataframe from csv file
+## Create dataframe from csv file
     1. Create dataframe
         ``` sql
         orders_df = (spark.read.csv("/FileStore/tables/part_00000-2")
@@ -56,7 +56,7 @@
         ```
 
     4. 
-2. Create dataframe from json file
+## Create dataframe from json file
     1. upload order json file
         ![image](https://user-images.githubusercontent.com/20516321/222363656-9aee863c-a7d3-46d8-8837-eba913b6602e.png)
 
@@ -78,7 +78,7 @@
         ```
     4. 
 
-3. Create dataframe from json file using format and load
+## Create dataframe from json file using format and load
 
     1. Create dataframe
         ``` sql
@@ -95,7 +95,7 @@
         orders_df_json.show(3)
         ```
     4. 
-4. DF Creation by enabling the header
+## DF Creation by enabling the header
     1. Refer spark help document [here](https://spark.apache.org/docs/latest/sql-data-sources-csv.html)upload employee csv file       
 
     2. Observe data
@@ -120,7 +120,7 @@
         emp_df.show(3)
         ```
     4
-5. DF Creation by using pipe (|) delimited data
+## DF Creation by using pipe (|) delimited data
     1. upload departments csv file       
 
     2. Observe data
@@ -138,7 +138,8 @@
            .load("/FileStore/tables/nov2022/dept_pipe/departments")
            )
         ```
-    4. Create dataframe with options
+## Create dataframe with options
+1. Create dataframe
         ``` sql
         dept_df = (spark
            .read
@@ -151,37 +152,37 @@
   
  
 
-    2. observe type
-        ``` sql
-        type(dept_df)
-        ```
-    3. See some data
-        ``` sql
-        dept_df.show(3)
-        ```
-    4. 
-6. Create dataframe from multiline/nested json file
-    1. upload students_nested_json_data file       
+2. observe type
+    ``` sql
+    type(dept_df)
+    ```
+3. See some data
+    ``` sql
+    dept_df.show(3)
+    ```
 
-    2. Observe data
-        ``` fs
-        %fs head /FileStore/tables/nov2022/students_nested_json/students_nested_json_data.json
-        ```
-    3. Create dataframe
-        ``` sql
-        stu_df = (spark
-          .read
-          .format("json")
-          .option("multiline", "true")
-          .load("/FileStore/tables/nov2022/students_nested_json/students_nested_json_data.json")
-           )
-        ```
-    2. observe type
-        ``` sql
-        type(stu_df)
-        ```
-    3. See some data
-        ``` sql
-        stu_df.show(3)
-        ```
-    4. 
+## Create dataframe from multiline/nested json file
+
+1. upload students_nested_json_data file
+2. Observe data
+    ``` fs
+    %fs head /FileStore/tables/nov2022/students_nested_json/students_nested_json_data.json
+    ```
+3. Create dataframe
+    ``` sql
+    stu_df = (spark
+      .read
+      .format("json")
+      .option("multiline", "true")
+      .load("/FileStore/tables/nov2022/students_nested_json/students_nested_json_data.json")
+       )
+    ```
+2. observe type
+    ``` sql
+    type(stu_df)
+    ```
+3. See some data
+    ``` sql
+    stu_df.show(3)
+    ```
+4. 
