Update 03. Create DataFrame.md

--- a/04-Data Bricks/03. Create DataFrame.md
+++ b/04-Data Bricks/03. Create DataFrame.md
@@ -186,5 +186,9 @@ stu_df.show(3)
 
 # Question
 
-1. 
+1. What is the use of inferschema ?
+
 # Answers
+
+1. InferSchema is a parameter used in Apache Spark's DataFrame reader to automatically determine the data types of columns in a dataset. When set to True, Spark analyzes the data to infer the appropriate data types for each column
+
