Update 05. Dataframe Operations.md

--- a/04-Data Bricks/05. Dataframe Operations.md
+++ b/04-Data Bricks/05. Dataframe Operations.md
@@ -1,11 +1,11 @@
 # Dataframe Operations
 
-# calculate totalsal of emp
+## calculate totalsal of emp
 ``` python
 from pyspark.sql.functions import col, when, expr
 df=(spark.read.format("csv").option("header",True).load("dbfs:/FileStore/tables/b240303/emp-1.csv")
-    .withColumn("COMM", when(col("COMM").isNull(), 0).otherwise(col("COMM")))
-    .withColumn("Totalsal",expr("SAL+COMM"))
+.withColumn("COMM", when(col("COMM").isNull(), 0).otherwise(col("COMM")))
+.withColumn("Totalsal",expr("SAL+COMM"))
 )
 df.show()
 ```
@@ -13,20 +13,20 @@ df.show()
 1. upload the file `Cloud-Data-Engineering/labdata/sample.txt`
 2. Copy DBFS path
 3. observe contents of file
-       ``` fs
-       %fs head /FileStore/tables/sample.txt
-       ```
+``` fs
+%fs head /FileStore/tables/sample.txt
+```
 4. Load file and observe data
 
 ``` pyspark
-       df = (spark
-      .read
-      .format("text")
-      .load("/FileStore/tables/sample.txt")
-      .toDF("lines")
-     ) 
+df = (spark
+.read
+.format("text")
+.load("/FileStore/tables/sample.txt")
+.toDF("lines")
+) 
 ```
-     
+
 ```pysaprk
 display(df)
 ```
@@ -78,10 +78,10 @@ display(sorted_df)
 2. Load into dataframe
 ``` python
 input_df = (spark
-            .read
-            .format("json")
-            .option("multiline", "true")
-            .load("/FileStore/tables/dec2022_data/input.json"))
+.read
+.format("json")
+.option("multiline", "true")
+.load("/FileStore/tables/dec2022_data/input.json"))
 ```
 ```python
 display(input_df)
@@ -106,10 +106,10 @@ display(final_df)
 2. Load Data
 ```python
 stu_df = (spark
-          .read
-          .format("json")
-          .option("multiline", "true")
-          .load("/FileStore/tables/dec2022_data/students_nested_json_data.json"))
+.read
+.format("json")
+.option("multiline", "true")
+.load("/FileStore/tables/dec2022_data/students_nested_json_data.json"))
 ```
 ```python
 display(stu_df)
