Update 05. Dataframe Operations.md

--- a/04-Data Bricks/05. Dataframe Operations.md
+++ b/04-Data Bricks/05. Dataframe Operations.md
@@ -1,6 +1,7 @@
 # Dataframe Operations
 
-## calculate totalsal of emp
+## Calculate totalsal of emp
+
 ``` python
 from pyspark.sql.functions import col, when, expr
 df=(spark.read.format("csv").option("header",True).load("dbfs:/FileStore/tables/b240303/emp-1.csv")
@@ -10,6 +11,7 @@ df=(spark.read.format("csv").option("header",True).load("dbfs:/FileStore/tables/
 df.show()
 ```
 ## Word Count
+
 1. upload the file `Cloud-Data-Engineering/labdata/sample.txt`
 2. Copy DBFS path
 3. observe contents of file
@@ -68,8 +70,10 @@ from pyspark.sql.functions import desc
 sorted_df = agg_df.orderBy(desc("count")).limit(5)
 display(sorted_df)
 ```
-9. 
+
+
 ## Explode Example 1
+
 1. Observe Data
 
 ``` python
@@ -96,8 +100,9 @@ final_df = input_df.select("name", explode("values").alias("values"))
 display(final_df)
 ```
 
-3. 
+
 ## Explode Example 2
+
 1. observe data
 ``` python
 %fs head  /FileStore/tables/dec2022_data/students_nested_json_data.json
@@ -141,4 +146,6 @@ display(final_df)
 ```python
 final_df.printSchema()
 ```
-7. 
+
+## Questions
+## Answers
