Update 06. Write Mode.md

--- a/04-Data Bricks/06. Write Mode.md
+++ b/04-Data Bricks/06. Write Mode.md
@@ -135,3 +135,6 @@ df.write.format("json").save("/FileStore/tables/rritec/output/df_data")
  .save("dbfs:/FileStore/b2404053/")
 )
 ```
+
+## Questions
+## Answers
