Update 07. Read Modes.md

--- a/04-Data Bricks/07. Read Modes.md
+++ b/04-Data Bricks/07. Read Modes.md
@@ -93,7 +93,7 @@ display(dept_df)
 ``` pyspark
 dept_df.printSchema()
 ```
-# Custom schema by using Struct Type
+## Custom schema by using Struct Type
 1. import required functions and creat schema
 ``` pyspark
 from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DateType
@@ -128,7 +128,7 @@ display(dept_df)
 ``` pyspark
 dept_df.printSchema()
 ```
-# Custom Schema by using DDL String
+## Custom Schema by using DDL String
 
 1. observe the content
 ``` pysaprk
@@ -151,4 +151,5 @@ display(orders_df)
 ```pyspark
 orders_df.printSchema()
 ```
-
+## Questions
+## Answers
