Update 08. Join Dataframes.md

--- a/04-Data Bricks/08. Join Dataframes.md
+++ b/04-Data Bricks/08. Join Dataframes.md
@@ -1,5 +1,5 @@
 # Joining 2 dataframes
-1. already we have `dept_df`
+1. Already we have `dept_df`
 ``` pysaprk
 display(dept_df)
 ```
@@ -43,3 +43,5 @@ display(final_df)
 ``` pysaprk
 display(joined_df)
 ```
+## Questions
+## Answers
