Update 09.Spark DF Functions.md

--- a/04-Data Bricks/09.Spark DF Functions.md
+++ b/04-Data Bricks/09.Spark DF Functions.md
@@ -1,6 +1,6 @@
 # Spark DF Functions
 
-1. Create df
+## 1. Create df
 ``` python
 
 emp_data = [("James", "M", 60000),
@@ -13,14 +13,14 @@ emp_df = spark.createDataFrame(data = emp_data, schema = columns)
 display(emp_df)
 
 ```
-2. How to add one or more columns to the dataframe?
+## 2. How to add one or more columns to the dataframe?
 ``` python
 
 emp_df1=emp_df.withColumn("tax",emp_df.emp_sal *0.01).withColumn("hra",emp_df.emp_sal *0.03)
 display(emp_df1)
 
 ```
-3. case when
+## 3. case when
 ``` python
 
 from pyspark.sql.functions import expr
@@ -32,7 +32,7 @@ new_df = emp_df1.withColumn("new_gender", expr("""CASE WHEN emp_gender = 'M' THE
 display(new_df)
 
 ```
-4. lit
+## 4. lit
 ``` python
 
 from pyspark.sql.functions import lit
@@ -49,7 +49,7 @@ display(mgr_df)
 
 ```
 
-5. split
+## 5. split
 ``` python
 
 emp_data = [("james,a,smith", 123),
@@ -70,7 +70,7 @@ split_df = (
 display(split_df)
 
 ```
-6. concat_ws
+## 6. concat_ws
 ```python
 
 stu_data = [("steve", ["java", "scala"]),
@@ -100,7 +100,7 @@ display(new_df)
 new_df.printSchema()
 
 ```
-7. explode
+## 7. explode
 ``` python
 
 display(stu_df)
@@ -119,7 +119,7 @@ display(explode_df)
 
 ```
 
-8. withColumnRenamed
+## 8. withColumnRenamed
 ``` python
 
 display(stu_df)
@@ -138,7 +138,7 @@ new_df.printSchema()
 
 ```
 
-9. Explode on a Nested Json
+## 9. Explode on a Nested Json
 
 ``` python
 
@@ -185,7 +185,7 @@ display(final_flattened_df)
 final_flattened_df.printSchema()
 
 ```
-10.  collect_list
+## 10.  collect_list
 ``` python
 
 emp_data = [("James", "Sales", 3000),
@@ -211,14 +211,14 @@ display(emp_df)
 from pyspark.sql.functions import collect_list
 display(emp_df.select(collect_list("emp_sal").alias("emp_sal_list")))
 ```
-11. collect_set
+## 11. collect_set
  ``` python
  
  from pyspark.sql.functions import collect_set
 display(emp_df.select(collect_set("emp_sal").alias("emp_sal_set")))
 
 ```
-12. count
+## 12. count
 
 ``` python
 
@@ -226,14 +226,14 @@ from pyspark.sql.functions import count
 display(emp_df.select(count("emp_sal").alias("emp_sal_count")))
 
 ```
-13. countDistinct
+## 13. countDistinct
 ``` python
 
 from pyspark.sql.functions import countDistinct
 display(emp_df.select(countDistinct("emp_sal").alias("emp_sal_distinct_count")))
 
 ```
-14. first & last
+## 14. first & last
 ``` python
 
 from pyspark.sql.functions import first
@@ -248,7 +248,7 @@ display(emp_df.select(last("emp_sal").alias("emp_sal_last")))
 
 ```
 
-15. max & min
+## 15. max & min
 ``` python
 
 from pyspark.sql.functions import  max
@@ -262,27 +262,26 @@ display(emp_df.select(min("emp_sal").alias("emp_sal_min")))
 
 ```
 
-16. sum
+## 16. sum
 ``` python
 
 from pyspark.sql.functions import  sum
 display(emp_df.select(sum("emp_sal").alias("emp_sal_sum")))
 
 ```
-17. sumDistinct
+## 17. sumDistinct
 ``` python
 
 from pyspark.sql.functions import  sumDistinct
 display(emp_df.select(sumDistinct("emp_sal").alias("emp_sal_sumDistinct")))
 
 ```
-18. row_number
-``` python
+## 18. row_number
 
+``` python
 from pyspark.sql.window import Window
 from pyspark.sql.functions import desc
 windowSpec = Window.partitionBy("emp_dept").orderBy(desc("emp_sal"))
-
 ```
 ``` python
 
@@ -302,7 +301,7 @@ display(final_df)
 display(new_df.filter("row_number <= 2"))
 
 ```
-20. rank
+## 19. rank
 ``` python
 
 from pyspark.sql.window import Window
@@ -329,7 +328,7 @@ display(final_df)
 display(new_df.filter("rank <= 2"))
 
 ```
-21. dense_rank
+## 20. dense_rank
 ``` python
 
 from pyspark.sql.window import Window
@@ -355,7 +354,7 @@ display(final_df)
 display(new_df.filter("dense_rank <= 2"))
 
 ```
-22. lag
+## 21. lag
 ``` python
 
 from pyspark.sql.window import Window
@@ -369,7 +368,7 @@ from pyspark.sql.functions import lag
 new_df = emp_df.withColumn("lag", lag("emp_sal", 1).over(windowSpec))
 display(new_df)
 ```
-23. lead
+## 22. lead
 ``` python
 
 from pyspark.sql.window import Window
@@ -383,7 +382,7 @@ new_df = emp_df.withColumn("lead", lead("emp_sal", 1).over(windowSpec))
 display(new_df)
 
 ```
-25. partitionBy
+## 23. partitionBy
 ``` python
 
 emp_df.write
