Update 11. medallion architecture.md

--- a/04-Data Bricks/11. medallion architecture.md
+++ b/04-Data Bricks/11. medallion architecture.md
@@ -69,7 +69,7 @@ gold_df = silver_df.groupBy("DEPTNO").agg(
 )
 
 # Write the DataFrame to a Delta table in the gold layer
-silver_df.write.format("delta").mode("overwrite").saveAsTable("gold.emp")
+gold_df.write.format("delta").mode("overwrite").saveAsTable("gold.emp")
 
 ```
 9. 
