Update 02.Incorta Interview Questions.md

--- a/miscellaneous/02.Incorta Interview Questions.md
+++ b/miscellaneous/02.Incorta Interview Questions.md
@@ -7,3 +7,12 @@
 7. end-to-end flow of data. for ex:  how we are getting data into general sla table
 8. how we are getting data into budget fact table and balance fact table
 9. what is materialized view and how to create in incorta
+10. what is row level security in power bi?
+11. Tell me about data bricks?
+12. what is data security?
+13. what is data lake storage?
+14. for what purpose do you use notebooks?
+
+
+
+
