--- a/miscellaneous/03. Interview.md
+++ b/miscellaneous/03. Interview.md
@@ -1,5 +1,4 @@
-1. Pandas df vs PySpark df
-   ## Pandas DataFrame vs. PySpark DataFrame
+# 1. Pandas DataFrame vs. PySpark DataFrame
 
 **Pandas DataFrame** and **PySpark DataFrame** are both powerful tools for data manipulation and analysis in Python, but they differ in their scale and architecture.
 
