--- a/miscellaneous/03. Interview.md
+++ b/miscellaneous/03. Interview.md
@@ -1,4 +1,4 @@
-# 1. Pandas DataFrame vs. PySpark DataFrame
+## 1. Pandas DataFrame vs. PySpark DataFrame
 
 **Pandas DataFrame** and **PySpark DataFrame** are both powerful tools for data manipulation and analysis in Python, but they differ in their scale and architecture.
 
@@ -42,7 +42,49 @@
 
 The choice between Pandas and PySpark depends on the size of your dataset, the complexity of your analysis, and the available computational resources.
 
-3. ADLS Gen1 vs ADLS Gen2 Vs One Lake
+
+## 2. ADLS Gen1 vs. ADLS Gen2 vs. OneLake
+
+Microsoft Azure offers a suite of data lake storage solutions to accommodate various data storage and processing needs. Let's explore the differences between ADLS Gen1, ADLS Gen2, and OneLake.
+
+### ADLS Gen1
+* **Legacy:** Older generation of Azure Data Lake Storage.
+* **HDFS-compatible:** Provides a Hadoop Distributed File System (HDFS)-compatible interface.
+* **Limited Scalability:** Can be limited in terms of scalability and performance compared to newer solutions.
+* **Security:** Offers robust security features, including role-based access control (RBAC).
+
+### ADLS Gen2
+* **Modern Data Lake:** Built on top of Azure Blob Storage, offering a scalable and cost-effective solution.
+* **Hierarchical Namespace:** Provides a hierarchical file system structure, making it easier to organize and manage data.
+* **High Performance:** Optimized for big data analytics workloads, offering high throughput and low latency.
+* **Scalability:** Can scale to petabytes of data.
+* **Security:** Offers advanced security features, including encryption, access control, and auditing.
+
+### OneLake
+* **Unified Data Platform:** A unified platform that integrates data lake storage, data warehouse, and data engineering capabilities.
+* **Unified Namespace:** Provides a single namespace for accessing data across different storage layers.
+* **Serverless Architecture:** Enables scalable and cost-effective data processing.
+* **Enhanced Security:** Offers advanced security features, including fine-grained access control and data encryption.
+* **AI and ML Integration:** Seamlessly integrates with Azure AI and ML services.
+
+**Key Differences:**
+
+| Feature | ADLS Gen1 | ADLS Gen2 | OneLake |
+|---|---|---|---|
+| Storage | HDFS-compatible | Azure Blob Storage | Azure Blob Storage |
+| Scalability | Limited | Highly scalable | Highly scalable |
+| Performance | Can be slower for large datasets | Optimized for big data analytics | Optimized for big data analytics |
+| Security | Robust security features | Robust security features | Advanced security features, including data governance and compliance |
+| Integration | Integrates with Hadoop ecosystem | Integrates with various data processing tools and services | Unified platform for data engineering, analytics, and AI/ML |
+
+**Choosing the Right Solution:**
+
+* **ADLS Gen1:** Suitable for existing Hadoop-based workloads and legacy applications.
+* **ADLS Gen2:** Ideal for most modern data lake scenarios, especially for big data analytics and machine learning workloads.
+* **OneLake:** The preferred choice for a unified data platform that combines data storage, analytics, and AI/ML capabilities.
+
+By understanding the differences between these storage solutions, you can select the best option for your specific data storage and processing needs.
+
 4. Did you worked on Logic apps? if yes tell me your use case?
 5. how to improve pyspark join condition performance
 6. How to improve lookup performance in pyspark
